--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "bs-custom-file-input": "^1.3.4"
+        "@fancyapps/fancybox": "^3.5.7",
+        "bs-custom-file-input": "^1.3.4",
+        "slick-carousel": "^1.8.1"
     }
 }
